--- a/zee1/Cargo.toml
+++ b/zee1/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+spin = "0.9"
+common = {path = "../common"}
 
 [dev-dependencies]
-mockall = "*"
+mockall = "0.10.2"
+rspec = "1.0"
