--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -3,8 +3,7 @@ name = "zee1-engine"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 spin = "0.9.2"
 mockall = "0.10.2"
+fluid = "0.3"
