--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "stdlib.h": "c",
-        "sdl.h": "c"
+        "sdl.h": "c",
+        "sdl_opengl.h": "c"
     },
     "C_Cpp.default.includePath": [
         "/usr/include/SDL2",
